--- a/src/containers/HotDetail/component/BuyHotelTickets/BuyHotelTickets.scss
+++ b/src/containers/HotDetail/component/BuyHotelTickets/BuyHotelTickets.scss
@@ -47,11 +47,29 @@
     font-size: 12px !important;
 }
 
+.toolBar {
+    // position: absolute;
+    // left: 0;
+    // right: 0;
+    // bottom: 0;
+    width: 100%;
+    height: 55px;
+    white-space: nowrap;
+    padding: 12px 20px;
+    background-color: #2D343B;
+}
+
+.nonStartDays {
+    background-color: #D6D6D6 !important;
+}
+
 .toolBarWrapper {
     position: relative;
-    text-align: center;
+    height: 31px;
+    line-height: 31px;
 
     font-family: PingFangSC-Regular;
+    text-align: center;
     font-size: 16px;
     color: #FFFFFF;
 }
@@ -59,4 +77,16 @@
 .totalPrice {
     margin: 0 8px;
     color: #EC0539;
+}
+
+.bookingEnded {
+    width: 100%;
+    height: 44px;
+    border-radius: 5px;
+    border: 1px solid rgba(155, 155, 155, .25);
+
+    font-size: 16px;
+    text-align: center;
+    line-height: 44px;
+    color: #9B9B9B;
 }
