--- a/src/containers/Tickets/component/Ticket/Ticket.scss
+++ b/src/containers/Tickets/component/Ticket/Ticket.scss
@@ -75,7 +75,7 @@ $ticketHeight: 130px;
 
 .rest {
     position: absolute;
-    bottom: 6px;
+    bottom: 12px;
     left: 14px;
     right: 0;
 }
@@ -83,6 +83,7 @@ $ticketHeight: 130px;
 .ticketCount {
     display: inline-block;
     vertical-align: top;
+    line-height: 24px;
     font-size: 12px;
     color: #E62A10;
 }
