--- a/src/containers/Register/container/ToBeVip.scss
+++ b/src/containers/Register/container/ToBeVip.scss
@@ -91,6 +91,10 @@
     font-style: italic;
     color: #000000;
     vertical-align: baseline;
+
+    @media(max-width: 320px) {
+        font-size: 30px;
+    }
 }
 
 .priceSymbol {
@@ -122,6 +126,10 @@
         margin-left: 5px;
         font-size: 0px;
         vertical-align: middle;
+    }
+
+    @media(max-width: 320px) {
+        margin: 10px 0;
     }
 }
 
