--- a/src/containers/Tickets/component/Header/Header.scss
+++ b/src/containers/Tickets/component/Header/Header.scss
@@ -70,6 +70,11 @@ $avatarHeight: 60px;
     }
 }
 
+.toBeVipOnHeader {
+    padding: 0px 50px;
+    padding-bottom: 10px;
+}
+
 $bottomHeight: 40px;
 .bottom {
     height: $bottomHeight;
